--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -3,6 +3,7 @@
 
 $font-family-mono: 'Jetbrains Mono' !default;
 $font-family-sans-serif: 'National Park' !default;
+$font-family-sans-serif-narrow: 'Routed Gothic Narrow' !default;
 
 // Might not be needed, too many typefaces
 $font-family-mono-secondary: 'CMU Typewriter Text' !default;
