--- a/src/styles/components/_canvas-el.scss
+++ b/src/styles/components/_canvas-el.scss
@@ -4,6 +4,10 @@
   .#{$p} {
     // border: solid 2px #f00;
   }
+
+  .#{$p}__object {
+    // border: solid 2px #f00;
+  }
 }
 
 @include make-canvas-el-style('canvas-el');
