--- a/src/styles/components/canvas/_ghost.scss
+++ b/src/styles/components/canvas/_ghost.scss
@@ -16,7 +16,7 @@
     @include border;
     border-radius: $radius-md;
     background-color: rgba($blueprint-blue-dark, 0.75);
-    // border: solid 2px #f00;
+    user-select: none;
 
     z-index: map.get(D.$z-index, 'hover');
   }
