--- a/src/styles/components/_entity.scss
+++ b/src/styles/components/_entity.scss
@@ -6,6 +6,7 @@
   @include border;
   border-radius: $radius-md;
   background: $blueprint-blue-dark;
+  // opacity: 0.3;
   height: 100%;
   width: 100%;
   display: flex;
