feat(styles): add main font assets

--- a/src/styles/base/_fonts.scss
+++ b/src/styles/base/_fonts.scss
@@ -21,3 +21,62 @@
   font-weight: 500;
   src: url('../../assets/fonts/NationalPark-Outline.otf');
 }
+
+//
+
+// #region Routed Gothic
+@font-face {
+  font-family: 'Routed Gothic';
+  src: url('../../assets/fonts/routed-gothic.ttf');
+}
+
+@font-face {
+  font-family: 'Routed Gothic';
+  font-style: italic;
+  src: url('../../assets/fonts/routed-gothic-italic.ttf');
+}
+
+@font-face {
+  font-family: 'Routed Gothic';
+  font-style: oblique;
+  src: url('../../assets/fonts/routed-gothic-half-italic.ttf');
+}
+// #endregion
+
+// #region Routed Gothic Narrow
+@font-face {
+  font-family: 'Routed Gothic Narrow';
+  src: url('../../assets/fonts/routed-gothic-narrow.ttf');
+}
+
+@font-face {
+  font-family: 'Routed Gothic Narrow';
+  font-style: italic;
+  src: url('../../assets/fonts/routed-gothic-narrow-italic.ttf');
+}
+
+@font-face {
+  font-family: 'Routed Gothic Narrow';
+  font-style: oblique;
+  src: url('../../assets/fonts/routed-gothic-narrow-half-italic.ttf');
+}
+// #endregion
+
+// #region Routed Gothic Wide
+@font-face {
+  font-family: 'Routed Gothic Wide';
+  src: url('../../assets/fonts/routed-gothic-wide.ttf');
+}
+
+@font-face {
+  font-family: 'Routed Gothic Wide';
+  font-style: italic;
+  src: url('../../assets/fonts/routed-gothic-wide-italic.ttf');
+}
+
+@font-face {
+  font-family: 'Routed Gothic Wide';
+  font-style: oblique;
+  src: url('../../assets/fonts/routed-gothic-wide-half-italic.ttf');
+}
+// #endregion
