--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -5,6 +5,7 @@
 $font-family-mono: 'Jetbrains Mono' !default;
 $font-family-sans-serif: 'Routed Gothic' !default;
 $font-family-sans-serif-narrow: 'Routed Gothic Narrow' !default;
+$font-family-sans-serif-wide: 'Routed Gothic Wide' !default;
 
 // Might not be needed, too many typefaces
 $font-family-mono-secondary: 'CMU Typewriter Text' !default;
