--- a/src/styles/components/_entity-palette.scss
+++ b/src/styles/components/_entity-palette.scss
@@ -45,7 +45,7 @@
 
     &.--filler {
       // border: solid 2px #f00;
-      background-color: #405cb1;
+      background-color: #004f86;
       background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23e4eaf6' fill-opacity='1' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
     }
   }
